cabal-version: 2.4

name: dsv
version: 0.0.0.1
category: Text, CSV, Pipes
synopsis: DSV (delimiter-separated values)

description:
    Utilities for working with DSV (delimiter-separated values) files.

tested-with: GHC==8.6.5

extra-source-files: changelog.md
data-files:
    test-data/tweets.csv
  , test-data/doc-example-with-header.csv
  , test-data/doc-example-without-header.csv
  , test-data/doc-example-malformed-with-header.csv
  , test-data/doc-example-malformed-without-header.csv

copyright: 2019 Typeclass Consulting, LLC
license: MIT
license-file: license.txt

homepage:    https://github.com/typeclasses/dsv
bug-reports: https://github.com/typeclasses/dsv/issues

author:     Chris Martin
maintainer: Chris Martin, Julie Moronuki

library
    hs-source-dirs: library
    default-language: Haskell2010

    ghc-options:
        -Wall
        -fdefer-typed-holes

    exposed-modules:
        Dsv

    autogen-modules:
        Paths_dsv

    other-modules:
        Paths_dsv
      , Dsv.AttoLookupTermination
      , Dsv.AttoParser
      , Dsv.AttoPipe
      , Dsv.ByteString
      , Dsv.CommonDelimiters
      , Dsv.DelimiterSplice
      , Dsv.DelimiterType
      , Dsv.Encoding
      , Dsv.English
      , Dsv.FileFold
      , Dsv.FileFoldCsv
      , Dsv.FileStrictCsvLookup
      , Dsv.FileStrictCsvMap
      , Dsv.FileStrictCsvRead
      , Dsv.FileStrictLookup
      , Dsv.FileStrictMap
      , Dsv.FileStrictRead
      , Dsv.Fold
      , Dsv.Header
      , Dsv.IO
      , Dsv.Lens
      , Dsv.LookupErrors
      , Dsv.Lookups
      , Dsv.LookupPipe
      , Dsv.LookupType
      , Dsv.Misc
      , Dsv.Numbers
      , Dsv.ParseError
      , Dsv.ParseTermination
      , Dsv.Parsing
      , Dsv.Text
      , Dsv.Validation
      , Dsv.Vector

    build-depends:
        attoparsec ^>= 0.13.2.2
      , base ^>= 4.12.0.0
      , bytestring ^>= 0.10.8.2
      , cassava ^>= 0.5.1.0
      , containers ^>= 0.6.0.1
      , foldl ^>= 1.4.5
      , lens ^>= 4.17.1
      , mtl ^>= 2.2.2
      , pipes ^>= 4.3.10
      , pipes-bytestring ^>= 2.1.6
      , pipes-safe ^>= 2.3.1
      , template-haskell ^>= 2.14.0.0
      , text ^>= 1.2.3.1
      , validation ^>= 1.1
      , vector ^>= 0.12.0.3

test-suite hedgehog
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: hedgehog.hs

  ghc-options:
      -Wall
      -fno-warn-unused-imports
      -fno-warn-missing-signatures

  other-modules:
      Paths_dsv

  build-depends:
      dsv
    , base ^>= 4.12.0.0
    , bytestring ^>= 0.10.8.2
    , containers ^>= 0.6.0.1
    , foldl ^>= 1.4.5
    , hedgehog ^>= 1.0
    , text ^>= 1.2.3.1
    , vector ^>= 0.12.0.3
