cabal-version: 2.4

name: dsv
version: 0.0.0.1
category: Text, CSV, Pipes
synopsis: DSV (delimiter-separated values)

description:
    Utilities for working with DSV (delimiter-separated values) files.

tested-with: GHC==8.6.5

extra-source-files: changelog.md
data-files:
    test-data/tweets.csv
  , test-data/tweets-with-id-error.csv
  , test-data/tweets-with-duplicate-header.csv
  , test-data/doc-example-with-header.csv
  , test-data/doc-example-without-header.csv
  , test-data/doc-example-malformed-with-header.csv
  , test-data/doc-example-malformed-without-header.csv
  , test-data/doc-example-with-utf8-errors.csv
  , test-data/empty.csv

copyright: 2019 Typeclass Consulting, LLC
license: MIT
license-file: license.txt

homepage:    https://github.com/typeclasses/dsv
bug-reports: https://github.com/typeclasses/dsv/issues

author:     Chris Martin
maintainer: Chris Martin, Julie Moronuki

library
    hs-source-dirs: library
    default-language: Haskell2010

    ghc-options:
        -Wall
        -fdefer-typed-holes

    exposed-modules:
        DSV

    autogen-modules:
        Paths_dsv

    other-modules:
        Paths_dsv
      , DSV.AttoParser
      , DSV.AttoPipe
      , DSV.AttoView
      , DSV.ByteString
      , DSV.CommonDelimiters
      , DSV.DelimiterSplice
      , DSV.DelimiterType
      , DSV.FileFold
      , DSV.FileFoldCsv
      , DSV.FileStrictCsvMap
      , DSV.FileStrictCsvRead
      , DSV.FileStrictCsvZipView
      , DSV.FileStrictMap
      , DSV.FileStrictRead
      , DSV.FileStrictZipView
      , DSV.Fold
      , DSV.Header
      , DSV.IndexError
      , DSV.IO
      , DSV.LookupError
      , DSV.Numbers
      , DSV.NumberViews
      , DSV.ParseError
      , DSV.ParseStop
      , DSV.Parsing
      , DSV.Pipes
      , DSV.Position
      , DSV.Prelude
      , DSV.Text
      , DSV.TextReaderView
      , DSV.UTF8
      , DSV.Validation
      , DSV.Vector
      , DSV.VectorViews
      , DSV.ViewType
      , DSV.ZipViewError
      , DSV.ZipViewFold
      , DSV.ZipViewType
      , DSV.ZipViews
      , DSV.ZipViewPipe
      , DSV.ZipViewStop

    build-depends:
        attoparsec ^>= 0.13.2.2
      , base ^>= 4.12.0.0
      , bytestring ^>= 0.10.8.2
      , cassava ^>= 0.5.1.0
      , containers ^>= 0.6.0.1
      , foldl ^>= 1.4.5
      , pipes ^>= 4.3.10
      , pipes-bytestring ^>= 2.1.6
      , pipes-safe ^>= 2.3.1
      , template-haskell ^>= 2.14.0.0
      , text ^>= 1.2.3.1
      , validation ^>= 1.1
      , vector ^>= 0.12.0.3

test-suite hedgehog
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: hedgehog.hs

  ghc-options:
      -Wall
      -fno-warn-missing-signatures
      -threaded

  other-modules:
      Paths_dsv
    , DSV.TestPrelude
    , DSV.TestData.Tweets
    , DSV.Tests.FileFoldCsv
    , DSV.Tests.FileStrictCsvRead
    , DSV.Tests.FileStrictCsvZipView

  build-depends:
      dsv
    , base ^>= 4.12.0.0
    , bytestring ^>= 0.10.8.2
    , containers ^>= 0.6.0.1
    , foldl ^>= 1.4.5
    , hedgehog ^>= 1.0
    , safe-exceptions ^>= 0.1.7.0
    , text ^>= 1.2.3.1
    , vector ^>= 0.12.0.3

test-suite doctest
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: doctest.hs

  ghc-options:
      -Wall
      -threaded

  build-depends:
      base ^>= 4.12.0.0
    , doctest ^>= 0.16.0.1
