cabal-version: 2.4

name: pipes-dsv
version: 0.0.0.1
category: Text, CSV, Pipes
synopsis: Streaming DSV (delimiter-separated values) parser

description:
    Integrates the @cassava@ and @pipes@ packages to create a
    convenient way to consume DSV (delimiter-separated values)
    data in constant memory.

tested-with: GHC==8.6.5

extra-source-files: changelog.md
data-files: test/tweets.csv

copyright: 2019 Typeclass Consulting, LLC
license: MIT
license-file: license.txt

homepage:    https://github.com/typeclasses/pipes-dsv
bug-reports: https://github.com/typeclasses/pipes-dsv/issues

author:     Chris Martin
maintainer: Chris Martin, Julie Moronuki

library
    hs-source-dirs: library
    default-language: Haskell2010

    ghc-options:
        -Wall
        -fdefer-typed-holes

    exposed-modules:
        Pipes.Dsv

    autogen-modules:
        Paths_pipes_dsv

    other-modules:
        Paths_pipes_dsv
      , Pipes.Dsv.Atto
      , Pipes.Dsv.Atto.Error
      , Pipes.Dsv.Atto.Pipe
      , Pipes.Dsv.Atto.Termination
      , Pipes.Dsv.ByteString
      , Pipes.Dsv.Cassava
      , Pipes.Dsv.Cassava.Atto
      , Pipes.Dsv.Cassava.Opts
      , Pipes.Dsv.Cassava.Pipes
      , Pipes.Dsv.CsvFileStrict
      , Pipes.Dsv.Delimiter
      , Pipes.Dsv.Delimiter.TH
      , Pipes.Dsv.Delimiter.Type
      , Pipes.Dsv.FileStrict
      , Pipes.Dsv.Header
      , Pipes.Dsv.Vector

    build-depends:
        attoparsec ^>= 0.13.2.2
      , base ^>= 4.12.0.0
      , bytestring ^>= 0.10.8.2
      , cassava ^>= 0.5.1.0
      , mtl ^>= 2.2.2
      , pipes ^>= 4.3.10
      , pipes-bytestring ^>= 2.1.6
      , pipes-safe ^>= 2.3.1
      , template-haskell ^>= 2.14.0.0
      , vector ^>= 0.12.0.3

test-suite hedgehog
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: hedgehog.hs

  ghc-options:
      -Wall
      -fno-warn-unused-imports
      -fno-warn-missing-signatures

  build-depends:
      pipes-dsv
    , base ^>= 4.12.0.0
    , hedgehog ^>= 1.0
    , text ^>= 1.2.3.1
    , vector ^>= 0.12.0.3
